Intergrated the database with the ui. Created ASyncTasks to load data and ViewData classes to add these to the ui. Updated the model to properly convert these data objects to strings and numbers. Added the PreferencesManager class that updates the SharedPreferences. Login, Registration, Account and Car pages are fully working now. Logout is working Ride Registration is working Ride Overview imports data from database. Prices in this view is not working due to backend not yet being implemented. Ride Overview uses geocoding to display the coordinates. Ride Total is working but using dummy data due to backend not being implemented Ride Search is just the ui elements with no data interaction

--- a/app/src/main/res/layout/fragment_ride_year_total_list.xml
+++ b/app/src/main/res/layout/fragment_ride_year_total_list.xml
@@ -7,24 +7,25 @@
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="85dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/tvRideYearTotalDate"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/listRideYearTotal"
+        app:layout_constraintEnd_toEndOf="@+id/tvRideYearTotalPrice"
+        app:layout_constraintStart_toStartOf="@+id/tvRideYearTotalDate"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listRideYearTotal"
         android:name="com.thijsrijpert.rekeningrijden.Controller.ViewControllers.FragmentController.RideYearTotalFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".Controller.ViewControllers.FragmentController.RideYearTotalFragment"
         tools:listitem="@layout/fragment_ride_year_total" />
 
@@ -32,17 +33,25 @@
         android:id="@+id/tvRideYearTotalDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/tvRideYearTotalDate"
         app:layout_constraintBottom_toTopOf="@+id/listRideYearTotal"
-        app:layout_constraintStart_toStartOf="@+id/listRideYearTotal" />
+        app:layout_constraintStart_toStartOf="@+id/listRideYearTotal"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvRideYearTotalPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="47dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/tvRideYearTotalPrice"
         app:layout_constraintBottom_toTopOf="@+id/listRideYearTotal"
-        app:layout_constraintEnd_toEndOf="@+id/listRideYearTotal" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvRideYearTotalDate"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
