--- a/app/src/main/res/layout/activity_ride_registration.xml
+++ b/app/src/main/res/layout/activity_ride_registration.xml
@@ -13,17 +13,17 @@
        />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnRideRegistration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnDriverStart"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/spRideCar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="@dimen/activity_registration_button_car_margin"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spRideCar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
