--- a/app/src/main/res/layout/fragment_ride_year_total.xml
+++ b/app/src/main/res/layout/fragment_ride_year_total.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_weight="2">
 
     <TextView
         android:id="@+id/tvRideYearTotalDate"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/tvRideYearTotalPrice"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:layout_weight="1"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
