Added Styling to the app

--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -47,6 +47,7 @@
         android:id="@+id/btnCarNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/raisedButton"
         android:layout_marginTop="35dp"
         android:text="@string/btnCarNew"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +116,7 @@
         android:id="@+id/btnCarUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/flatButton"
         android:layout_marginTop="32dp"
         android:text="@string/btnCarUpdate"
         app:layout_constraintEnd_toEndOf="@+id/spCarType"
