--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -124,6 +124,7 @@
         android:id="@+id/btnRegistrationRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/flatButton"
         android:text="@string/btnRegistrationRegister"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/etRegistrationPhonenumber"
