--- a/app/src/main/res/layout/fragment_default_charge_details.xml
+++ b/app/src/main/res/layout/fragment_default_charge_details.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        style="@style/flatButton"
         android:text="@string/btnChargeUpdate"
         app:layout_constraintEnd_toEndOf="@+id/etChargePrice"
         app:layout_constraintTop_toBottomOf="@+id/etChargePrice" />
