--- a/app/src/main/res/layout/fragment_location_charge_details.xml
+++ b/app/src/main/res/layout/fragment_location_charge_details.xml
@@ -75,6 +75,7 @@
         android:id="@+id/btnChargeDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/flatButton"
         android:layout_marginTop="32dp"
         android:text="@string/btnChargeDelete"
         app:layout_constraintEnd_toEndOf="@+id/btnChargeUpdate"
@@ -84,6 +85,7 @@
         android:id="@+id/btnChargeUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/flatButton"
         android:layout_marginTop="32dp"
         android:text="@string/btnChargeUpdate"
         app:layout_constraintEnd_toEndOf="@+id/etChargePrice"
