--- a/app/src/main/res/layout/fragment_time_charge_details.xml
+++ b/app/src/main/res/layout/fragment_time_charge_details.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/btnChargeDelete"
+        style="@style/flatButton"
         app:layout_constraintEnd_toEndOf="@+id/btnChargeUpdate"
         app:layout_constraintTop_toBottomOf="@+id/btnChargeUpdate" />
 
@@ -68,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/btnChargeUpdate"
+        style="@style/flatButton"
         app:layout_constraintEnd_toEndOf="@+id/etChargePrice"
         app:layout_constraintTop_toBottomOf="@+id/etChargePrice" />
 </androidx.constraintlayout.widget.ConstraintLayout>
