--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -7,4 +7,5 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:textColorPrimary="@color/colorWhiteText" />
+        android:textStyle="bold"
+        android:textColorPrimary="@color/colorWhite" />
