Fixed some memory issue's and minor fixes to the different activities regarding effiecientcy

--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -75,6 +75,7 @@
         app:layout_constraintTop_toTopOf="@+id/spCarType" />
 
     <EditText
+        android:labelFor="@+id/tvCarNumberplate"
         android:id="@+id/etCarNumberplate"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
