--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tbRideRegistration" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationName"
         android:id="@+id/etRegistrationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegistrationName" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationUsername"
         android:id="@+id/etRegistrationUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegistrationUsername" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationPassword"
         android:id="@+id/etRegistrationPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,6 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegistrationPassword" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationZipcode"
         android:id="@+id/etRegistrationZipcode"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
@@ -93,6 +97,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegistrationZipcode" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationPhonenumber"
         android:id="@+id/etRegistrationPhonenumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,6 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegistrationPassword" />
 
     <EditText
+        android:labelFor="@id/tvRegistrationHomenumber"
         android:id="@+id/etRegistrationHomeNumber"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
