--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="Header">
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginTop">20dp</item>
     </style>
