--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -84,6 +84,7 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:digits="qwertyuioplkjhgfdsazxcvbnmZXCVBNMLKJHGFDSAQWERTYUIOP1234567890 "
         android:inputType="textPostalAddress"
         app:layout_constraintStart_toStartOf="@+id/etRegistrationPassword"
         app:layout_constraintTop_toBottomOf="@+id/tvRegistrationZipcode" />
@@ -102,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:digits="1234567890 "
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +123,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:digits="1234567890"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/etRegistrationZipcode"
