--- a/app/src/main/res/layout/fragment_time_charge_details.xml
+++ b/app/src/main/res/layout/fragment_time_charge_details.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="time"
-        android:digits="1234567890.:"
+        android:digits="1234567890:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/tvChargePrimary"
